# finance-solution

./: .gitignore  Cargo.toml  README.md
benches/: my_benchmark.rs
examples/: common_word_problems.rs
experiment/: Cargo.toml
experiment/benches/: my_benchmark.rs
experiment/examples/: bilbo_v1.rs  bilbo_v2.rs
experiment/src/: fina.rs  format.rs  lib.rs  main.rs
experiment/src/alternative_1/: finance.rs  flat_debug_examples.rs  mod.rs
experiment/src/verbose/: bilbo_baggins.rs  convert_rate.rs  convert_rate_solution.rs  convert_rates.rs  convert_rates_old.rs  debug.rs  examples_1.rs  future_value.rs  future_value_annuity.rs  mod.rs  net_present_value.rs  nper.rs  payment.rs  payment_solution.rs  payment_tvm.rs  periods.rs  perpetuity.rs  present_value.rs  present_value_annuity.rs  rate.rs  tvm_cashflow.rs  tvm_simple.rs  tvm_solver.rs  weird_enum_solver.rs
experiment/tests/: convert_rates.rs
experiment/tests/common/: mod.rs
finance/: Cargo.toml
finance/benches/: my_benchmark.rs
finance/examples/: common_word_problems.rs
finance/src/: convert_rate.rs  future_value.rs  future_value_annuity.rs  lib.rs  net_present_value.rs  nper.rs  payment.rs  periods.rs  present_value.rs  present_value_annuity.rs  rate.rs  round.rs  shared.rs  tvm_cashflow.rs  tvm_convert_rate.rs  tvm_simple.rs
finance/src/cashflow/: future_value_annuity.rs  mod.rs  payment.rs  present_value_annuity.rs
finance/src/tvm/: future_value.rs  mod.rs  periods.rs  present_value.rs  rate.rs
finance/src/tvm/test/: test_rename_a.txt  test_rename_b.txt
finance/tests/: payment.rs  present_and_future_value.rs  tvm.rs  tvm_simple.rs
src/: convert_rate.rs  excel.rs  lib.rs  round.rs  tvm_convert_rate.rs
src/academic/: fv.rs  loan.rs  mod.rs  periods.rs  periodz.rs  pv.rs
src/cashflow/: future_value_annuity.rs  mod.rs  net_present_value.rs  nper.rs  payment.rs  present_value_annuity.rs
src/convert_rate/: mod.rs
src/core/: mod.rs
src/core/cashflow/: future_value_annuity.rs  mod.rs  net_present_value.rs  nper.rs  payment.rs  present_value_annuity.rs
src/core/tvm/: future_value.rs  mod.rs  periods.rs  present_value.rs  rate.rs
src/excel/: mod.rs  tvm.rs
src/simple/: fv.rs  loan.rs  mod.rs  periodz.rs  pv.rs
src/tvm/: future_value.rs  mod.rs  periods.rs  present_value.rs  rate.rs
tests/: payment.rs
