[package]
name = "finance-solution"
version = "0.0.0"
authors = ["Shan Newton <shan.alexander2020@gmail.com>", "David Thureson <David.G.Thureson@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A library for finance time-value-of-money functions with detailed solutions and pretty-printed tables."
repository = "https://github.com/shan-alexander/finance-solution"
documentation = "https://docs.rs/finance-solution"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.6.0"
log = "0.4.8"
env_logger = "0.7.1"
libm = "0.2.1"
colored = "1.9"
num-format = "0.4.0"
itertools = "0.8.0"

[dev-dependencies]
criterion = "0.3"

# [[bench]]
# name = "my_benchmark"
# harness = false

[[example]]
name = "common_word_problems"
path = "examples/common_word_problems.rs"    # The source file of the target.
crate-type = ["bin"]