[package]
name = "experiment"
version = "0.1.0"
authors = ["Shan Newton <shan.alexander2020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num-traits = "0.2"
# ordered-float = "0.5.0"
float-cmp = "0.6.0"
log = "0.4.8"
env_logger = "0.7.1"