[package]
name = "experiment"
version = "0.1.0"
authors = ["Shan Newton <shan.alexander2020@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# num-traits = "0.2"
# ordered-float = "0.5.0"
finance = { path = "../finance" }
float-cmp = "0.6.0"
log = "0.4.8"
env_logger = "0.7.1"
libm = "0.2.1"
colored = "1.9"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false

[[example]]
name = "bilbo_v1"
path = "examples/bilbo_v1.rs"    # The source file of the target.
crate-type = ["bin"]

[[example]]
name = "bilbo_v2"
path = "examples/bilbo_v2.rs"    # The source file of the target.
crate-type = ["bin"]